--- a/views/partials/sidebar-admin.handlebars
+++ b/views/partials/sidebar-admin.handlebars
@@ -7,7 +7,7 @@
                 <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Welcome, {{name}}!</p>
+                <p>Welcome, {{employeeName}}!</p>
             </div>
         </div>
         <!-- sidebar menu: : style can be found in sidebar.less -->
