--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -1,148 +1,196 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>{{ title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</head>
+<section class="content-header">
+    <h1>Dashboard </h1>
+    <div id="txt" class="pull-right"></div>
+    <h1 class="pull-right" id="currentDate"></h1>
+</section>
 
-<body>
-	<div class="container container-margin-accountSettings">
-		{{#if message}}
-	   <div class="alert alert-danger">{{message}}</div>
-		{{/if}}
-		<div class="row">
+<section class="content">
+	<div class="box box-primary" style="display:none">
+		<div class="box-body">
 			{{#if edited}}
 				<div class="alert alert-success" role="alert">
 					{{edited}}
 				</div>
 			{{/if}}
 			{{#if alert}}
-				<div class="alert alert-error" role="alert">
+				<div class="alert alert-warning" role="alert">
 					{{alert}}
 				</div>
 			{{/if}}
-			<div class="col-md-4" style = "margin-bottom:30px">
-				<h2>Hello, Dr. {{ lname }}!</h2>
+			{{#if message}}
+			   <div class="alert alert-danger">{{message}}</div>
+			{{/if}}
+		</div>
+	</div>
+
+<!-- Row 1 -->
+	<div class="row">
+		<div class="col-md-6">
+			<div class="box box-primary">
+				<div class="box-header with-border">
+					<h3 class='box-title'>Change Password</h3>
+				</div>
+				<form class="" action="" method="post">
+					<div class="box-body">
+						<div class="form-group">
+							<label >Old Password</label>
+							<input type="password" id="editPassword" name="oldPassword" value="" class="form-control" placeholder='Enter old password' required>
+						</div>
+						<div class="form-group">
+							<label >New Password</label>
+							<input type="password" id="editPassword" name="editPassword" value="" class="form-control" placeholder='Password' required>
+						</div>
+						<div class="form-group">
+							<label >Confirm Password</label>
+							<input type="password" id="editPassword" name="editPassword2" value="" class="form-control" placeholder='Password' required>
+						</div>
+					</div>
+					<div class='box-footer'>
+						<button type="submit" class="btn btn-primary pull-right">Update</button>
+					</div>
+				</form>
 			</div>
 		</div>
-		<div class="form-inline">
-			<!--<div class="col-md-2 col-md-offset-2">
-				<h4>Name</h4>
-			</div>-->
-			<form class="form-horizontal" action="" method="post">
-				<label class="col-md-2 col-md-offset-2 control-label editName">Name</label>
 
-				<div class="col-md-6">
-					<input type="text" style = "margin-bottom: 20px" id="editName" name="editName" value="{{ fname }} {{lname}}" class="form-control" readonly>
+		<div class="col-md-6">
+			<div class="box box-primary">
+				<div class="box-header with-border" >
+					<h3 class='box-title'>Update Contact Information</h3>
 				</div>
-
-			</form>
-		</div>
-
-		<div class="form-inline">
-			<form class="form-horizontal" action="" method="post">
-				<label class="col-md-2 col-md-offset-2 control-label editPassword">Password</label>
-				<div class="col-md-3">
-					<input type="password" id="editPassword" name="editPassword" value="" class="form-control" required>
-				</div>
-				<div class="col-md-2">
-					<button type="password" style = "margin-bottom: 10px" class="btn custom-button" type="submit">Update</button>
-				</div>
-			</form>
-		</div>
-		<div class="form-inline">
-			<form class="form-horizontal" action="" method="post">
-				<label class="col-md-2 col-md-offset-2 control-label editEmail">Email Address</label>
-				<div class="col-md-3">
-					<input type="email" id="editEmail" name="editEmail" value="{{ email }}" class="form-control">
-				</div>
-				<div class="col-md-2">
-					<button type="email" style = "margin-bottom: 10px" class="btn custom-button">Update</button>
-				</div>
-			</form>
-		</div>
-		<div class="form-inline">
-			<form class="form-horizontal" action="" method="post">
-				<label class="col-md-2 col-md-offset-2 control-label editPhone">Phone Number</label>
-				<div class="col-md-3">
-					<input type="phone" id="editPhone" name="editPhone" value="{{ phone }}" class="form-control">
-				</div>
-				<div class="col-md-2">
-					<button type="phone" style = "margin-bottom: 10px" class="btn custom-button">Update</button>
-				</div>
-			</form>
-		</div>
-		<div class="form-inline">
-			<form class = "form-horizontal" action = "" method = "">
-
-				<label class="col-md-4 control-label editNotify"><b>Notification Settings:</b></label>
-
-				<div class="col-md-2 col-md-offset-3">
-					 <br><br>
-				</div>
-
-			</form>
-		</div>
-		<div  class="column">
-			<div class="row">
-				<div class="col-md-3 col-md-offset-3">
-					<h5>When Patient Checked-in:</h5>
-				</div>
-			</div>
-			<div class="row formSection">
-				<div class="form-inline">
-					<label class="col-md-3 col-md-offset-3 control-label inApp">Send me a text (sms rate may apply)</label>
-					<div class="col-md-2 col-md-offset-1">
-						{{#if smsNotify}}
-						<form class="form-horizontal" action="" method="post">
-							<input type="hidden" name="sendText" value="0">
-							<input type="checkbox" name="sendText" onchange="this.form.submit();" checked />
-						</form>
-						{{else}}
-						<form class="form-horizontal" action="" method="post">
-							<input type="checkbox" name="sendText" value="1" onchange="this.form.submit();" />
-						</form>
-						{{/if}}
+				<form class="" action="" method="post">
+					<div class='box-body'>
+						<div class="form-group">
+							<label >Name</label>
+							<input type="text" id="editPassword" name="editName" value="{{fname}} {{lname}}" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label >Email Address</label>
+							<input type="email" id="editPassword" name="editEmail" value="{{email}}" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label >Phone Number</label>
+							<input type="text" id="editPassword" name="editPhone" value="{{phone}}" class="form-control" required>
+						</div>
 					</div>
-				</div>
-				<div class="form-inline">
-					<label class="col-md-3 col-md-offset-3 control-label inApp">Send me an email</label>
-					<div class="col-md-2 col-md-offset-1">
-						{{#if emailNotify}}
-						<form class="form-hozirontal" action="" method="post">
-							<input type="hidden" name="sendEmail" value="0">
-							<input type="checkbox" name="sendEmail" onchange="this.form.submit();" checked />
-						</form>
-						{{else}}
-						<form class="form-horizontal" action="" method="post">
-							<input type="checkbox" name="sendEmail" value="1" onchange="this.form.submit();" />
-						</form>
-						{{/if}}
+					<div class="box-footer">
+						<button type="submit" class="btn btn-primary pull-right">Update</button>
 					</div>
 
-				</div>
+				</form>
 			</div>
 		</div>
 	</div>
 
-    <footer class="footer navbar-fixed-bottom">
-        <div class="container">
-            <ul class="list-inline footer-links text-center">
-                <!--<li><a href="#">About Us</a></li>
-                <li><a href="#">Store</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Support</a></li>-->
-                <li class = "footer-copyright">Copyright &#169; Gold Team-CSE 112, Winter 2015. All Rights Reserved.</li>
-            </ul>
-        </div>
-    </footer>
+{{#if isAdmin}}
+ <!-- ROW 2 -->
+	<div class="row">
+		<div class="col-md-6">
+			<div class ="box box-primary col-md-6">
+			    <div class="box-header with-border">
+			        <h3 class='box-title'>Upload a New Logo</h3>
+			        <p style="color:grey">Upload your own logo to match your office.</p>
+			    </div>
+			    <form id="uploadForm" enctype="multipart/form-data" action="/uploadlogo" method="post">
+				    <div class='box-body text-center' >
+				    	<div class='row verticalAlign'>
+					    	<div class='col-md-6'>
+						        {{#if logo}}
+						            <h4 class="">Current Logo</h4>
+						            <div class="">
+						                <img class="logoImage logoRow" src={{logo}} />
+						            </div>
+						        {{else}}
+						            <h2>There is currently no logo to display for your business</h2>
+						        {{/if}}
+						    </div>
+						    <div class='col-md-6'>
 
-</body>
-</html>
+									<div class='form-group'>
+									    <input type="file" name="userLogo" class="text-center" />
+									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
+									</div>
+							</div>
+						</div>
+					</div>
 
+
+					<div class='box-footer'>
+						    <input class ="btn btn-primary pull-right" type="submit" value="Upload Image" name="Upload Button"/>
+					</div>
+				</form>
+                </div>
+			</div>
+
+            <!-- Change Theme -->
+            <div class="col-md-6">
+    			<div class ="box box-primary col-md-6">
+    			    <div class="box-header with-border">
+    			        <h3 class='box-title'>Upload/Choose a New Theme</h3>
+    			        <p style="color:grey">Upload your own theme to match your office.</p>
+    			    </div>
+    			    <form id="uploadForm" enctype="multipart/form-data" action="/uploadlogo" method="post">
+    				    <div class='box-body text-center' >
+    				    	<div class='row verticalAlign'>
+    					    	<div class='col-md-6'>
+    						        {{#if logo}}
+    						            <h4 class="">Current Theme</h4>
+    						            <div class="">
+    						                <img class="logoImage logoRow" src={{logo}} />
+    						            </div>
+    						        {{else}}
+    						            <h2>There is currently no theme to display for your business</h2>
+    						        {{/if}}
+    						    </div>
+    						    <div class='col-md-6'>
+
+    									<div class='form-group'>
+    									    <input type="file" name="userLogo" class="text-center" />
+    									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
+    									</div>
+    							</div>
+    						</div>
+    					</div>
+
+
+    					<div class='box-footer'>
+    						    <input class ="btn btn-primary pull-right" type="submit" value="Upload Image" name="Upload Button"/>
+    					</div>
+    				</form>
+                    </div>
+    			</div>
+            </div>
+
+
+<!-- Row 3 -->
+        <!-- Change company info -->
+        <div class="row">
+            <div class="col-md-6">
+                <div class="box box-primary">
+                    <div class="box-header with-border" >
+                        <h3 class='box-title'>Company Info</h3>
+                        <p style="color:grey">Configure other parts of your company account.</p>
+                    </div>
+                    <form class="" action="" method="post">
+                        <div class='box-body'>
+                            <div class="form-group">
+                                <label >Company Name</label>
+                                <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}">
+                            </div>
+                            <div class="form-group">
+                                <label >Phone Number</label>
+                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{phone}}">
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-primary pull-right">Update</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+    	</div>
+
+    </div>
+	</div>
+	{{/if}}
+</section>
