--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,6 +15,7 @@
         <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
+        <h3 class="pull-left">Welcome, {{employeeName}}!</h3>
         <!-- Navbar Right Menu -->
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
