--- a/views/partials/styles.handlebars
+++ b/views/partials/styles.handlebars
@@ -1,14 +1,13 @@
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel='stylesheet' href='/stylesheets/style.css'/>
+<!-- Bootstrap -->
+<link rel="stylesheet" href="/dist/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<!--<link rel='stylesheet' href='/stylesheets/style.css'/>-->
 
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="/dist/bower_components/font-awesome/css/font-awesome.min.css">
 <!-- Ionicons -->
-<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<!-- jvectormap -->
-<link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+<!--<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">-->
 <!-- Theme style -->
 <link rel="stylesheet" href="/dist/css/AdminLTE.min.css">
 <!-- AdminLTE Skins. Choose a skin from the css/skins
