--- a/views/partials/sidebar-business.handlebars
+++ b/views/partials/sidebar-business.handlebars
@@ -12,7 +12,7 @@
             </li>
             {{else}}
             <li class="{{patients}} treeview">
-                <a href="/visitor-list">
+                <a href="/dashboard">
                     <i class="fa fa-navicon"></i> <span>Patients</span>
                 </a>
             </li>
