--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -178,7 +178,7 @@
                             </div>
                             <div class="form-group">
                                 <label >Phone Number</label>
-                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{phone}}">
+                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{companyPhone}}">
                             </div>
                         </div>
                         <div class="box-footer">
