--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -170,15 +170,15 @@
                         <h3 class='box-title'>Company Info</h3>
                         <p style="color:grey">Configure other parts of your company account.</p>
                     </div>
-                    <form class="" action="" method="post">
+                    <form class="" action="/businesssetting" method="post">
                         <div class='box-body'>
                             <div class="form-group">
                                 <label >Company Name</label>
-                                <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}">
+                                <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}" required>
                             </div>
                             <div class="form-group">
                                 <label >Phone Number</label>
-                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{companyPhone}}">
+                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{companyPhone}}" required>
                             </div>
                         </div>
                         <div class="box-footer">
