--- a/views/business/visitor-list.handlebars
+++ b/views/business/visitor-list.handlebars
@@ -35,30 +35,15 @@
                             </tr>
                             </thead>
                             <tbody id="appointment-list">
-                            <tr>
-
-                                <td>Gev</td>
-                                <td>Henry</td>
-                                <td>10:40AM</td>
-                                <td style="color: red">10:54AM</td>
-                                <td>Lobby</td>
-                            </tr>
-                            <tr>
-
-                                <td>Yen</td>
-                                <td>Henry</td>
-                                <td>11:00AM</td>
-                                <td style="color: rgba(26, 128, 15, 0.83)">10:36AM</td>
-                                <td>Checked In</td>
-                            </tr>
-                            <tr>
-
-                                <td>Jax</td>
-                                <td>Andrew</td>
-                                <td>9:30AM</td>
-                                <td></td>
-                                <td></td>
-                            </tr>
+                            {{#each patients}}
+                                <tr>
+                                    <td>{{visitor}}</td>
+                                    <td>{{doctor}}</td>
+                                    <td>{{apptTime}}</td>
+                                    <td>{{currentTime}}</td>
+                                    <td>{{state}}</td>
+                            {{/each}}
+                                </tr>
                             </tbody>
                         </table>
                     </div>
