--- a/views/business/visitor-list.handlebars
+++ b/views/business/visitor-list.handlebars
@@ -36,9 +36,40 @@
                   <td>{{apptTime}}</td>
                   <td>{{currentTime}}</td>
                   <td>{{state}}</td>
-                  <td><button class="btn btn-sm btn-flat btn-info" onclick="openFormResponse(`{{formResponse}}`)">Form</button></td>
-                  {{/each}}
+                  <td><button class="btn btn-sm btn-flat btn-info" onclick="openFormResponse(`{{formResponse}}`)" data-toggle="modal" data-target="#myModal{{id}}">View Form</button></td>
+
+                  <!-- Modal -->
+                  <div class="modal fade" id="myModal{{id}}" role="dialog">
+                    <div class="modal-dialog">
+
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">Check-in Form</b></h4>
+                        </div>
+                        <div class="modal-body">
+                          <h4><b>Patient: </b>{{ visitor }}</h4>
+                          <h4><b>Form Responses</b></h4>
+                          <ol>
+                            {{#each formResponse}}
+                            <li>
+                              <div>
+                                <b>{{ label }}</b>
+                                <p>{{ value }}</p>
+                              </li>
+                            {{/each}}
+                          </ol>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
                 </tr>
+                {{/each}}
               </tbody>
             </table>
           </div>
@@ -57,8 +88,3 @@
 </section>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/visitor-list.js"></script>
-<script>
-function openFormResponse(form) {
-  var formResponse = JSON.parse(form);
-}
-</script>
